appId: swmansion.enriched.example
tags:
  - accessibility
---
- launchApp

- tapOn:
    id: "toggle-screen-button"

- runFlow:
    file: "../subflows/capture_or_assert_screenshot.yaml"
    env:
        SCREENSHOT_NAME: "font_scaling_placeholder"

- tapOn:
    id: "editor-input"

- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Plain "

- tapOn:
    id: "toolbar-bold"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "bold"
- tapOn:
    id: "toolbar-bold"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: " "

- tapOn:
    id: "toolbar-italic"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "italic"
- tapOn:
    id: "toolbar-italic"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: " "

- tapOn:
    id: "toolbar-underline"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "underline"
- tapOn:
    id: "toolbar-underline"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: " "

- tapOn:
    id: "toolbar-strikethrough"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "strike-through"
- tapOn:
    id: "toolbar-strikethrough"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: " "

- tapOn:
    id: "toolbar-inline-code"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "code"
- tapOn:
    id: "toolbar-inline-code"

- runFlow:
    file: "../subflows/capture_or_assert_screenshot.yaml"
    env:
        SCREENSHOT_NAME: "font_scaling"
