appId: swmansion.enriched.example
---
# Fix: merge inline styles with plain text
- launchApp

- tapOn:
    id: 'toggle-screen-button'

- tapOn:
    id: 'editor-input'

- tapOn:
    id: 'toolbar-bold'
- tapOn:
    id: 'toolbar-italic'
- tapOn:
    id: 'toolbar-underline'

- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'First line'
- pressKey: Enter

- tapOn:
    id: 'toolbar-bold'
- tapOn:
    id: 'toolbar-italic'
- tapOn:
    id: 'toolbar-underline'
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'Second line'

- tapOn:
    id: 'editor-input'
    point: '4%,75%'

- pressKey: Backspace

- runFlow:
    file: '../subflows/capture_or_assert_screenshot.yaml'
    env:
      SCREENSHOT_NAME: 'inline_styles_merge'
