appId: swmansion.enriched.example
---
# PR #672 - fix: removing inline styles
- launchApp

- tapOn:
    id: 'toggle-screen-button'

- tapOn:
    id: 'editor-input'

- tapOn:
    id: 'toolbar-bold'
- tapOn:
    id: 'toolbar-italic'
- tapOn:
    id: 'toolbar-underline'
- tapOn:
    id: 'toolbar-strikethrough'

- inputText: 'First line'
- pressKey: Enter
- inputText: 'Second line'

- tapOn:
    id: 'toolbar-code-block'

- runFlow:
    file: '../subflows/capture_or_assert_screenshot.yaml'
    env:
      SCREENSHOT_NAME: 'inline_styles_removal'
