appId: swmansion.enriched.example
---
# PR #421 - fix(iOS): prevent extending link styles
# PR #502 - fix(android): link turns into plain text
- launchApp

- tapOn:
    id: "toggle-screen-button"

- tapOn:
    id: "editor-input"

- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Hello "

- runFlow:
    file: "../subflows/insert_link.yaml"
    env:
      LINK_TEXT: "test"
      LINK_URL: "https://swmansion.com"

- tapOn:
    id: "editor-input"
    point: "5%, 50%"
- tapOn:
    id: "editor-input"
    point: "95%, 50%"

- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "ing"

- runFlow:
    file: "../subflows/capture_or_assert_screenshot.yaml"
    env:
      SCREENSHOT_NAME: "link_not_extended"
