appId: swmansion.enriched.example
---
# Visually validates rendering of all heading levels (H1–H6).
- launchApp

- tapOn:
    id: 'toggle-screen-button'

- tapOn:
    id: 'editor-input'

- tapOn:
    id: 'toolbar-heading-1'
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'H1'
- pressKey: Enter

- tapOn:
    id: 'toolbar-heading-2'
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'H2'
- pressKey: Enter

- tapOn:
    id: 'toolbar-heading-3'
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'H3'
- pressKey: Enter

- tapOn:
    id: 'toolbar-heading-4'
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'H4'
- pressKey: Enter

- tapOn:
    id: 'toolbar-heading-5'
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'H5'
- pressKey: Enter

- tapOn:
    id: 'toolbar-heading-6'
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: 'H6'
- tapOn:
    id: 'size-max-button'

- runFlow:
    file: '../subflows/capture_or_assert_screenshot.yaml'
    env:
      SCREENSHOT_NAME: 'paragraph_styles_headings'
