appId: swmansion.enriched.example
---
# PR #450 - fix(iOS): nil NSParagraphStyle crashes
- launchApp

- tapOn:
    id: "toggle-screen-button"

- tapOn:
    id: "editor-input"

- tapOn:
    id: "toolbar-unordered-list"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Unordered"
- pressKey: Enter
- tapOn:
    id: "toolbar-unordered-list"

- tapOn:
    id: "toolbar-ordered-list"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Ordered"
- pressKey: Enter
- tapOn:
    id: "toolbar-ordered-list"

- tapOn:
    id: "toolbar-checkbox-list"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Checkbox"
- pressKey: Enter
- tapOn:
    id: "toolbar-checkbox-list"

- tapOn:
    id: "toolbar-code-block"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Code"
- pressKey: Enter
- tapOn:
    id: "toolbar-code-block"

- tapOn:
    id: "toolbar-quote"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Quote"
- pressKey: Enter
- tapOn:
    id: "toolbar-quote"

- tapOn:
    id: "toolbar-heading-1"
- runFlow:
    file: '../../subflows/input_text.yaml'
    env:
      TEXT: "Heading"

- assertVisible:
    id: "editor-input"
- tapOn:
    id: "size-max-button"

- runFlow:
    file: "../subflows/capture_or_assert_screenshot.yaml"
    env:
        SCREENSHOT_NAME: "paragraph_styles_no_crash"

