appId: swmansion.enriched.example
---
- tapOn:
    id: 'insert-value-button'

- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'value-modal-input'
    timeout: 10000

- tapOn:
    id: 'value-modal-input'

- inputText: ${VALUE}

- tapOn:
    id: 'value-modal-submit-button'
