appId: swmansion.enriched.example
---
# Validates that paragraph styles are displayed correctly
- launchApp

- tapOn:
    id: 'toggle-screen-button'

- tapOn:
    id: 'toggle-enriched-text-screen-button'

- runFlow:
    file: '../subflows/set_enriched_text_value.yaml'
    env:
      VALUE: '<html><h1>Heading 1</h1><h2>Heading 2</h2><h3>Heading 3</h3><h4>Heading 4</h4><h5>Heading 5</h5><h6>Heading 6</h6><codeblock><p>Code block</p></codeblock><blockquote><p>Blockquote</p></blockquote><ul><li>Unordered list</li></ul><ol><li>Ordered list</li></ol><ul data-type="checkbox"><li>Checkbox list</li></ul></html>'

- swipe:
    direction: UP
    waitToSettleTimeoutMs: 1000

- waitForAnimationToEnd

- runFlow:
    file: '../subflows/capture_or_assert_screenshot.yaml'
    env:
      SCREENSHOT_NAME: 'paragraph_styles_display'
